# aoc-2025

./: .gitignore  LICENSE  readme.md
1/: 1.cpp  2.cpp
2/: 1.cpp  2.cpp
3/: 1.cpp  2.cpp
4/: 1.cpp  2.cpp
5/: 1.cpp  2.cpp
6/: 1.cpp  2.cpp
7/: 1.cpp  2.cpp
8/: 1.cpp  2.cpp  CMakeLists.txt
9/: 1.cpp  2.cpp
template/: CMakeLists.txt
